--- a/Assignment_1_besvarelse.Rmd
+++ b/Assignment_1_besvarelse.Rmd
@@ -52,7 +52,7 @@ tilbys til å engasjere seg i replikering fordi økonomisk yrke vurderer
 replikering som et ideal for å bli kjent, men ikke å bli praktisert
 [@mccullough2008].
 
-## Mulig løsning
+***Mulig løsning***
 
 -   Problemets omfang - McCullough
 
