--- a/Assignment_1_besvarelse.tex
+++ b/Assignment_1_besvarelse.tex
@@ -170,19 +170,18 @@ our results are reliable (or not, since reproducibility is no guarantee
 of correctness).
 
 \emph{The second} reason to aspire to reproducibility is to enable
-others to make use of our methods and results. Equipped with only our
+others to make use of methods and results. Equipped with only our
 published article, our colleagues might struggle to reconstruct our
 method in enough detail to apply it to their own data. Adopting a
 reproducible workflow means publishing our code and data in order to
-allow our colleagues to extend our approach to new applications with a
+allow scientists to extend our approach to new applications with a
 minimum of effort. This has the potential to save a great deal of time
-in transmitting knowledge to future researchers. \textbf{(copy
-pastet=skal omskrives)}
+in transmitting knowledge to future researchers.
+\protect\hyperlink{ref-Git-reproducabilty}{\emph{Reproducibility Guide}}
+(\protect\hyperlink{ref-Git-reproducabilty}{u.å.})
 
 In this paper will discuss the topics mentioned above in an light,yet
 hopefully understandable manner.
-
-\url{https://ropensci.github.io/reproducibility-guide/sections/introduction/}
 
 \hypertarget{reproducibility-r-notebooks}{%
 \subsubsection{Reproducibility, R
@@ -211,9 +210,7 @@ serve as an crucial component in verifying scientific results.\\
   hos}
 \end{itemize}
 
-\hypertarget{tidsskriftene-kunne-luxf8se-problemet}{%
-\section{\texorpdfstring{\textbf{tidsskriftene kunne løse
-problemet?}}{tidsskriftene kunne løse problemet?}}\label{tidsskriftene-kunne-luxf8se-problemet}}
+\textbf{tidsskriftene kunne løse problemet?}
 
 * Mulig løsning (teoretisk plan):
 
@@ -265,8 +262,9 @@ the ability of the scientific community to address this problem wanes.
 In addition, there is considerable potential for reputational damage to
 scientists, universities, and entire fields (for example, cancer
 biology, genomics, and psychology).
-
-\url{https://www.science.org/doi/full/10.1126/scitranslmed.aaf5003}
+\protect\hyperlink{ref-Science.org}{\emph{An incentive-based approach
+for improving data reproducibility}}
+(\protect\hyperlink{ref-Science.org}{u.å.})
 
 One possible cause of irreproducible-data is stated by Hessen
 as``\emph{Scientists are incentivized to produce more results at the
@@ -288,10 +286,9 @@ result}''. Hessen furthermore list three possible solutions:
 \item
   A third solution aims to compensate for the misalignment.\\
   (l\emph{imiting the number of papers scientists may publish per unit
-  time)}
+  time) \protect\hyperlink{ref-schulz2016}{Schulz et al.}
+  (\protect\hyperlink{ref-schulz2016}{2016})}
 \end{itemize}
-
-\url{https://www.repository.cam.ac.uk/bitstream/handle/1810/288025/Heesen\%202018\%20Why\%20the\%20Reward\%20Structure\%20of\%20Science\%20Makes\%20Reproducibility\%20Problems\%20Inevitable.pdf?sequence=3}
 
 \hypertarget{incentivizing-gone-wrong}{%
 \subsubsection{Incentivizing gone
@@ -306,8 +303,8 @@ Additionally, Wakefield most likely manipulated the data, thus
 representing in false results. Since then Wakefield has become the
 ``\emph{godfather}'' for the anti-vaccine movement, a movement whom have
 grown exponentially during the covid-19 pandemic.
-
-\url{https://onlinelibrary.wiley.com/doi/full/10.1111/jnc.13844}
+\protect\hyperlink{ref-schulz2016}{Schulz et al.}
+(\protect\hyperlink{ref-schulz2016}{2016})
 
 \hypertarget{example-list-2-level}{%
 \subsubsection{Example list 2 level}\label{example-list-2-level}}
@@ -364,18 +361,26 @@ The session info function provides the reader information regarding
 which operating system, packages and data sets that have been used. This
 information is crucial in terms of gaining reproducibility.
 
-* Er økt reproduserbarhet noe som vil tvinge seg frem eller er dagens
+\hypertarget{reproducibility-across-sectors}{%
+\subsubsection{Reproducibility across
+sectors}\label{reproducibility-across-sectors}}
 
-økte interesse bare et blaff?
+Other areas where application of reproducibility would prove beneficiary
+is e.g.~the pharmaceutical industry. Present day studies show that
+replicating present day clinical-research data is demanding. Which often
+leads to drugs to prolong their release to actual patient trials. One
+human factor could be the fear of being ``discredited'' among peers,
+which lead to an bias among researchers. Ultimately causing studies not
+to be reproduced. \protect\hyperlink{ref-Pharm-tech}{\emph{Why Is
+Reproducing Pharmaceutical Medical Research so Hard?}}
+(\protect\hyperlink{ref-Pharm-tech}{u.å.})
 
-* Kan reproduserbarhet ha relevans i sektorer utenfor akademia?
+\hypertarget{conclusion}{%
+\subsubsection{\texorpdfstring{\textbf{Conclusion}}{Conclusion}}\label{conclusion}}
 
-- Konklusjon
-
-- Litteraturliste
-
-jhekfhkewhf \protect\hyperlink{ref-allaire2020}{Allaire et al.}
-(\protect\hyperlink{ref-allaire2020}{2020})
+Providing studies that are reproducible is vital in terms of quality
+assurance , cost- effective and deterring fraudulent scientists is
+crucial.
 
 For generelle tanker rundt reproduserbarhet er
 \protect\hyperlink{ref-peng2011}{Peng}
@@ -388,10 +393,12 @@ problemets omfang innen fagområdet økonomi.
 tidsskriftenes arkiver av datasett og programkode er en
 tilfredsstillende løsning av problemet
 
-(\protect\hyperlink{ref-peng2011}{Peng, 2011}) lkdflflkejflelfjlkejflkje
-
 \hypertarget{litteraturliste}{%
 \section{Litteraturliste}\label{litteraturliste}}
+
+\textless div id=``refs''\textgreater\textless/div\textgreater{}
+
+\# Appendix
 
 \hypertarget{display-of-git-commits-and-three-branches}{%
 \subsubsection{Display of Git commits and three
@@ -401,10 +408,10 @@ branches}\label{display-of-git-commits-and-three-branches}}
 
 \hypertarget{refs}{}
 \begin{CSLReferences}{1}{0}
-\leavevmode\hypertarget{ref-allaire2020}{}%
-Allaire, J., Xie, Y., McPherson, J., Luraschi, J., Ushey, K., Atkins,
-A., Wickham, H., Cheng, J., Chang, W., og Iannone, R. (2020).
-\emph{Rmarkdown: {Dynamic} Documents for r}.
+\leavevmode\hypertarget{ref-Science.org}{}%
+\emph{An incentive-based approach for improving data reproducibility}.
+(u.å.).
+\url{https://www.science.org/doi/full/10.1126/scitranslmed.aaf5003}
 
 \leavevmode\hypertarget{ref-mccullough2008}{}%
 McCullough, B. D., McGeary, K. A., og Harrison, T. D. (2008). Do
@@ -416,6 +423,21 @@ Journal of Economics/Revue canadienne d'économique}, \emph{41}(4),
 Peng, R. D. (2011). Reproducible {Research} in {Computational Science}.
 \emph{Science}, \emph{334}(6060), 1226--1227.
 \url{https://doi.org/10.1126/science.1213847}
+
+\leavevmode\hypertarget{ref-Git-reproducabilty}{}%
+\emph{Reproducibility Guide}. (u.å.).
+\url{https://ropensci.github.io/reproducibility-guide/sections/introduction/}
+
+\leavevmode\hypertarget{ref-schulz2016}{}%
+Schulz, J. B., Cookson, M. R., og Hausmann, L. (2016). The impact of
+fraudulent and irreproducible data to the translational research crisis
+{{}} solutions and implementation. \emph{Journal of Neurochemistry},
+\emph{139}(S2), 253--270. \url{https://doi.org/10.1111/jnc.13844}
+
+\leavevmode\hypertarget{ref-Pharm-tech}{}%
+\emph{Why is reproducing pharmaceutical medical research so hard?}
+(u.å.).
+\url{https://www.pharmaceutical-technology.com/features/why-is-it-so-hard-to-reproduce-medical-research-results/}
 
 \end{CSLReferences}
 
